kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculatrice-ingress
  namespace: othmane-achour
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-othmane-achour-polytech-dijon.kiowy.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 5000
